--- a/AlanaRetratosAgendamentos-Back-End/pom.xml
+++ b/AlanaRetratosAgendamentos-Back-End/pom.xml
@@ -37,6 +37,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.zaxxer</groupId>
+			<artifactId>HikariCP</artifactId>
+			<version>4.0.3</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
