--- a/AlanaRetratosAgendamentos-Back-End/src/main/resources/application.properties
+++ b/AlanaRetratosAgendamentos-Back-End/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-spring.datasource.url=jdbc:postgresql://34.122.183.75/gcp-agenda-db
+spring.datasource.url=jdbc:postgresql://localhost:5432/AlanaRetratosAgendamentos
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=12345
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non-contextual_creation=true
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-
